# retrograde

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
src/pystrata/: __about__.py  git.py  repo.py  utils.py
src/retrograde/: __init__.py  repo.py
tests/: test_log.py  test_repo.py  test_repo_clone.py  test_repo_local.py  test_utils.py
