[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retrograde"
dynamic = ["version"]
description = 'Rewind git repositories'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Sam Boysel", email = "sboysel@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/retrograde#readme"
Issues = "https://github.com/unknown/retrograde/issues"
Source = "https://github.com/unknown/retrograde"

[tool.hatch.version]
path = "src/retrograde/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest -s {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/retrograde tests}"

[tool.coverage.run]
source_pkgs = ["retrograde", "tests"]
branch = true
parallel = true
omit = [
  "src/retrograde/__about__.py",
]

[tool.coverage.paths]
retrograde = ["src/retrograde", "*/retrograde/src/retrograde"]
tests = ["tests", "*/retrograde/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
